force-app/main/default/objects/TestDriveAppoinmentFlyout__e/TestDriveAppoinmentFlyout__e.object-meta.xml
<CustomObject>
    <label>TestDriveAppoinmentFlyout</label>
    <pluralLabel>TestDriveAppoinmenstFlyout</pluralLabel>
</CustomObject>