force-app/main/default/objects/TestDriveAppoinmentFlyout__e/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>AccountName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>