force-app/main/default/objects/TestDriveAppoinmentFlyout__e/fields/InputType__c.field-meta.xml
<CustomField>
    <fullName>InputType__c</fullName>
    <label>InputType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>